# noop-cnb

./: Cargo.toml  README.md
.github/workflows/: ci.yml  pr-test.yml  prepare-release.yml  prepare-shared-action.yml  prepare-shared-workflow.yml  prepare.yml  release-alt.yml  release-shared-workflow.yml  release-simple.yml  release.yml  test.yml
buildpacks/noop-a/: CHANGELOG.md  buildpack.toml
buildpacks/noop-a/src/: main.rs
buildpacks/noop-b/: CHANGELOG.md  Cargo.toml  buildpack.toml
buildpacks/noop-b/src/: main.rs
buildpacks/noop-bash/: CHANGELOG.md  buildpack.toml
buildpacks/noop-multi-arch/: Cargo.toml  buildpack.toml
buildpacks/noop-multi-arch/src/: main.rs
commands/: Cargo.toml
meta-buildpacks/noop-meta/: CHANGELOG.md  buildpack.toml  package.toml
