[package]
name = "commands"
description = "Release commands"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", default-features = false, features = [
    "derive",
    "error-context",
    "help",
    "std",
    "usage",
] }
console = "0.15.5"
glob = "0.3.1"
tree-sitter = "0.20.10"
tree-sitter-toml = "0.20.0"
tree-sitter-md = "0.1.5"
semver = "1.0.17"

[dev-dependencies]
